--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,5 +3,8 @@ services:
     build: .
     volumes:
       - ./:/app
+      - /Users/example/my-site:/data:ro # mount your site here
     stdin_open: true
     tty: true
+    entrypoint: ['python', '-m', 'app.cli']
+    command: ['--help']
