--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Interactive CLI tool to generate secure Content Security Policy h
 authors = [
     {name = "Ameen AB."}
 ]
-license = {file = "License"}
+license = {file = "LICENSE"}
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
