--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -33,7 +33,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Run Trivy on dependencies
-        uses: aquasecurity/trivy-action@v0.16.1
+        uses: aquasecurity/trivy-action@0.30.0
         with:
           scan-type: 'fs'
           vuln-type: 'library'
