--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "beautifulsoup4 (>=4.13.4,<5.0.0)",
     "rich (>=14.0.0,<15.0.0)",
     "requests (>=2.32.3,<3.0.0)",
-    "requests-mock (>=1.12.1,<2.0.0)"
+    "requests-mock (>=1.12.1,<2.0.0)",
+    "bandit (>=1.8.3,<2.0.0)"
 ]
 
 [tool.poetry.group.dev.dependencies]
