--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,12 +97,12 @@ jobs:
       - name: Run tests
         run: poetry run pytest -v --cov=hashcsp --cov-report=xml
 
-      - name: Upload coverage report
-        uses: codecov/codecov-action@v4
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./coverage.xml
-        if: matrix.python-version == '3.12'
+      # - name: Upload coverage report
+      #   uses: codecov/codecov-action@v4
+      #   with:
+      #     token: ${{ secrets.CODECOV_TOKEN }}
+      #     file: ./coverage.xml
+      #   if: matrix.python-version == '3.12'
 
   security:
     name: Security Checks
