--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,6 @@ dependencies = [
     "typer (>=0.15.2,<0.16.0)",
     "beautifulsoup4 (>=4.13.4,<5.0.0)",
     "rich (>=14.0.0,<15.0.0)",
-    "requests (>=2.32.3,<3.0.0)",
     "requests-mock (>=1.12.1,<2.0.0)",
     "bandit (>=1.8.3,<2.0.0)",
     "playwright (>=1.51.0,<2.0.0)"
@@ -28,6 +27,7 @@ types-requests = "^2.32.0.20250328"
 safety = "^3.2.7"
 detect-secrets = "^1.5.0"
 pytest-cov = "^5.0.0"
+types-beautifulsoup4 = "^4.12.0.20250204"
 
 [tool.black]
 line-length = 88
