--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,6 @@ dependencies = [
     "typer (>=0.15.2,<0.16.0)",
     "beautifulsoup4 (>=4.13.4,<5.0.0)",
     "rich (>=14.0.0,<15.0.0)",
-    "requests-mock (>=1.12.1,<2.0.0)",
-    "bandit (>=1.8.3,<2.0.0)",
     "playwright (>=1.51.0,<2.0.0)",
     "pydantic (>=2.11.3,<3.0.0)"
 ]
@@ -29,6 +27,13 @@ safety = "^3.2.7"
 detect-secrets = "^1.5.0"
 pytest-cov = "^5.0.0"
 types-beautifulsoup4 = "^4.12.0.20250204"
+anyio = "^4.9.0,<5.0.0"
+pytest-asyncio = "^0.26.0"
+pytest-tornasync = "^0.6.0.post2"
+pytest-trio = "^0.8.0"
+pytest-twisted = "^1.14.3"
+twisted = "^24.11.0"
+bandit = "^1.8.3"
 
 [tool.black]
 line-length = 88
