docs: add comprehensive Google style docstrings
Add detailed docstrings to all public functions and classes following Google style:

Core modules:
- CSPGenerator: Document hash and directive management
- LocalScanner: Document HTML file analysis
- CSPConfig: Document configuration model and validation
- Printer: Document output formatting

CLI commands:
- cli.py: Document main entry point and callbacks
- fetch.py: Document remote website analysis
- generate.py: Document CSP header generation
- validate.py: Document header validation

The docstrings include:
- Class and function descriptions
- Parameter types and descriptions
- Return value documentation
- Exception handling details
- Usage examples where appropriate

--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,7 @@ cover/
 *.log
 local_settings.py
 db.sqlite3
+.cursor/
 db.sqlite3-journal
 
 # Flask stuff:
@@ -188,7 +189,7 @@ pyrightconfig.json
 
 ### VisualStudioCode ###
 .vscode/*
-!.vscode/settings.json
+.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
