--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,8 @@ dependencies = [
     "rich (>=14.0.0,<15.0.0)",
     "playwright (>=1.51.0,<2.0.0)",
     "pydantic (>=2.11.3,<3.0.0)",
-    "structlog (>=24.1.0,<25.0.0)",
-    "python-json-logger (>=2.0.7,<3.0.0)"
+    "structlog (>=24.1.0,<25.0.0)"
+    # "python-json-logger (>=2.0.7,<3.0.0)"
 ]
 
 [tool.poetry.group.dev.dependencies]
